cmake_minimum_required(VERSION 3.24)
project(ClionCpp)
set(CMAKE_CXX_STANDARD 17)

add_executable(p1 p1.c)
add_executable(p2 p2.c)
add_executable(p3 p3.c)
add_executable(p4 p4.c)
add_executable(p5 p5.c)
add_executable(p6 p6.c)
add_executable(p7 p7.c)
add_executable(p8 p8.c)
add_executable(p9 p9.c)
add_executable(p10 p10.c)
add_executable(p11 p11.c)
add_executable(p12 p12.c)
add_executable(p13 p13.c)
add_executable(p14 p14.c)
add_executable(p15 p15.c)
add_executable(8-4 8-4.c)
add_executable(8-5 8-5.c)
add_executable(8-6 8-6.c)
add_executable(test test.c)