cmake_minimum_required(VERSION 3.24)
project(ClionCpp)
set(CMAKE_CXX_STANDARD 17)

add_executable(B2001 B2001.c)
add_executable(B2002 B2002.cpp)
add_executable(B2003 B2003.c)
add_executable(B2008 B2008.c)
add_executable(B2010 B2010.c)
add_executable(B2011 B2011.c)
add_executable(B2012 B2012.c)
add_executable(B2013 B2013.c)
add_executable(B2014 B2014.c)
add_executable(B2015 B2015.c)