cmake_minimum_required(VERSION 3.24)
project(ClionCpp)
set(CMAKE_CXX_STANDARD 17)

add_executable(t1 t1.c)
add_executable(t2 t2.c)
add_executable(t3 t3.c)
add_executable(t4 t4.c)
add_executable(t5 t5.c)
add_executable(t6 t6.c)
add_executable(t8 t8.c)
add_executable(t9 t9.c)
add_executable(t10 t10.c)
add_executable(t11 t11.c)
