cmake_minimum_required(VERSION 3.24)
project(ClionCpp)
set(CMAKE_CXX_STANDARD 17)

add_executable(t1 t1.c)
add_executable(t2 t2.c)
add_executable(t3 t3.c)
add_executable(t4 t4.c)
add_executable(t5 t5.c)
add_executable(t6 t6.c)
add_executable(t8 t8.c)
add_executable(t9 t9.c)
add_executable(t10 t10.c)
add_executable(t11 t11.c)
add_executable(t12 t12.c)
add_executable(t13 t13.c)
add_executable(t14 t14.c)
add_executable(t15 t15.c)
add_executable(t16 t16.c)
add_executable(t17 t17.c)
add_executable(t18 t18.cpp)
add_executable(t19 t19.cpp)
add_executable(t20 t20.cpp)
add_executable(t21 t21.cpp)
add_executable(t22 t22.cpp)
add_executable(t23 t23.cpp)
add_executable(t24 t24.cpp)
add_executable(t25 t25.cpp)